shopping-list/shopping-list-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  selector:
    matchLabels:
      component: shopping-list
  template:
    metadata:
      labels:
        name: shopping-list
        component: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: rikit/shopping-list:training
          ports:
            - containerPort: 8080
            - containerPort: 8443
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1Gi"
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: shopping-list-service
spec:
  selector:
    component: shopping-list
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  type: LoadBalancer

---

apiVersion: v1
kind: Route
metadata:
  name: shopping-list-route
spec:
  to:
    kind: Service
    name: shopping-list-service
#  tls:
#    termination: passthrough
